--- a/templates/about.html
+++ b/templates/about.html
@@ -96,4 +96,10 @@
   }
 }
 </script>
+<div class="product-callout">
+  <h3>The Guerilla Camping Bible</h3>
+  <p>My complete system for living off-grid while making money online</p>
+  <p class="price"><del>$97</del> <strong>$27</strong></p>
+  <a href="https://gum.co/yourlink" class="cta-button">GET INSTANT ACCESS</a>
+</div>
 {% endblock %}
