--- a/templates/base.html
+++ b/templates/base.html
@@ -11,6 +11,7 @@
     <!-- CookieYes - MUST BE FIRST FOR COMPLIANCE -->
     <script id="cookieyes" type="text/javascript" src="https://cdn-cookieyes.com/client_data/f9240018d9682ec755f25926/script.js"></script>
     
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/guerilla.css') }}">
     <!-- Canonical URL -->
     <link rel="canonical" href="https://gorillacamping.site{{ request.path }}">
     
