--- a/templates/base.html
+++ b/templates/base.html
@@ -418,3 +418,6 @@ setTimeout(function() {
                     // Track with Google Analytics
                     if (typeof gtag !== '
 
+<script src="{{ url_for('static', filename='js/guerilla.js') }}"></script>
+{% include 'guerilla_chat.html' %}
+                                      
