--- a/templates/base.html
+++ b/templates/base.html
@@ -665,5 +665,5 @@ document.addEventListener('DOMContentLoaded', function() {
   }, 30000);
 });
 </script>
-    {% include 'guerilla_chat_modern.html' %}
+    {% include 'guerilla_chat_simple.html' %}
                                       
