Fix: Move styles.css to correct location and update base template to load proper CSS

--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
     <!-- CookieYes - MUST BE FIRST FOR COMPLIANCE -->
     <script id="cookieyes" type="text/javascript" src="https://cdn-cookieyes.com/client_data/f9240018d9682ec755f25926/script.js"></script>
     
-    <link rel="stylesheet" href="{{ static_base_url }}/css/guerilla.css">
+    <link rel="stylesheet" href="{{ static_base_url }}/css/styles.css">
     <!-- Canonical URL -->
     <link rel="canonical" href="https://gorillacamping.site{{ request.path }}">
     
@@ -23,7 +23,7 @@
     <link rel="icon" href="{{ static_base_url }}/favicon.ico" type="image/x-icon">
     
     <!-- CSS -->
-    <link rel="stylesheet" href="{{ static_base_url }}/styles.css">
+    <link rel="stylesheet" href="{{ static_base_url }}/css/guerilla.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap" rel="stylesheet">
 
     <!-- Social Meta Tags -->
