Cache bust: Force Cloudflare to serve new version

--- a/templates/index_simple.html
+++ b/templates/index_simple.html
@@ -3,6 +3,7 @@
 {% block title %}Gorilla Camping - Home{% endblock %}
 
 {% block content %}
+<!-- CACHE BUST: New simple version deployed at 2025-07-19 06:45 -->
 <div class="hero">
     <h1>GUERILLA CAMPING: UNCONVENTIONAL ADVENTURE</h1>
     <p>Off-grid living and camping tips from a badass perspective</p>
