--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,22 +1,37 @@
-{% extends "base.html" %}
-{% block title %}Blog - Gorilla Camping{% endblock %}
-{% block meta_description %}Discover the latest guerilla-style camping tips, gear reviews, and adventure stories on the Gorilla Camping blog.{% endblock %}
-{% block meta_keywords %}Gorilla Camping Blog, Guerilla Camping, Outdoor Adventures, Camping Tips, Gear Reviews{% endblock %}
-
-{% block content %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <title>Blog - Gorilla Camping</title>
+    <meta name="description" content="Discover the latest guerilla-style camping tips, gear reviews, and adventure stories on the Gorilla Camping blog.">
+    <meta name="keywords" content="Gorilla Camping Blog, Guerilla Camping, Outdoor Adventures, Camping Tips, Gear Reviews">
+    <link rel="stylesheet" href="/css/guerilla.css">
+</head>
+<body>
 <section class="blog-section">
     <h1>Blog Posts</h1>
-    <ul class="blog-list">
-        {% for post in posts %}
-            <li>
-                <a href="{{ url_for('post', slug=post['slug']) }}">
-                    {{ post['title'] }}
-                </a>
-                <small>Posted on {{ post['created_at'].strftime('%Y-%m-%d') }}</small>
-            </li>
-        {% else %}
-            <li>No blog posts found.</li>
-        {% endfor %}
+    <ul class="blog-list" id="blog-list">
+        <li>Loading posts...</li>
     </ul>
 </section>
-{% endblock %}
+
+<script>
+fetch('https://your-api-backend-url/api/blog-posts')
+  .then(res => res.json())
+  .then(posts => {
+    const ul = document.getElementById('blog-list');
+    ul.innerHTML = '';
+    if (posts.length === 0) {
+        ul.innerHTML = '<li>No blog posts found.</li>';
+    }
+    posts.forEach(post => {
+        const li = document.createElement('li');
+        li.innerHTML = `<a href="/blog/${post.slug}">${post.title}</a> <small>Posted on ${post.created_at}</small>`;
+        ul.appendChild(li);
+    });
+  })
+  .catch(() => {
+    document.getElementById('blog-list').innerHTML = '<li>Error loading posts.</li>';
+  });
+</script>
+</body>
+</html>
